; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/controller/extr_pci-xgene-msi.c_xgene_msi_int_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/controller/extr_pci-xgene-msi.c_xgene_msi_int_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xgene_msi = type { i64 }

@MSI_INT0 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xgene_msi*, i32)* @xgene_msi_int_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xgene_msi_int_read(%struct.xgene_msi* %0, i32 %1) #0 {
  %3 = alloca %struct.xgene_msi*, align 8
  %4 = alloca i32, align 4
  store %struct.xgene_msi* %0, %struct.xgene_msi** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.xgene_msi*, %struct.xgene_msi** %3, align 8
  %6 = getelementptr inbounds %struct.xgene_msi, %struct.xgene_msi* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @MSI_INT0, align 8
  %9 = add nsw i64 %7, %8
  %10 = load i32, i32* %4, align 4
  %11 = shl i32 %10, 16
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %9, %12
  %14 = call i32 @readl_relaxed(i64 %13)
  ret i32 %14
}

declare dso_local i32 @readl_relaxed(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
